Winners question popover fix on mobile

--- a/components/ui/QuestionPopover/index.module.scss
+++ b/components/ui/QuestionPopover/index.module.scss
@@ -28,3 +28,7 @@
   background: #fff;
   right: 38px;
 }
+
+.inner{
+  display: flex;
+}
